# radiationdosefastAPI

./: README.md  pyproject.toml
src/: app.py  models.py  schemas.py
src/data/: icrp103_factors.json
src/services/: dose_service.py  factors.py
tests/: test_dose_math.py  test_endpoints.py
